--- a/ReversiRestApiMVC/Properties/launchSettings.json
+++ b/ReversiRestApiMVC/Properties/launchSettings.json
@@ -18,7 +18,7 @@
     "ReversiRestApiMVC": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://0.0.0.0:5000",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
