Fixed https errors

--- a/ReversiRestApiMVC/ReversiRestApiMVC.csproj
+++ b/ReversiRestApiMVC/ReversiRestApiMVC.csproj
@@ -9,4 +9,13 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\js\signalr\dist\browser\signalr.js" />
+    <_ContentIncludedByDefault Remove="wwwroot\js\signalr\dist\browser\signalr.min.js" />
+    <_ContentIncludedByDefault Remove="wwwroot\lib\signalr\signalr.js" />
+    <_ContentIncludedByDefault Remove="wwwroot\lib\signalr\signalr.js.map" />
+    <_ContentIncludedByDefault Remove="wwwroot\lib\signalr\signalr.min.js" />
+    <_ContentIncludedByDefault Remove="wwwroot\lib\signalr\signalr.min.js.map" />
+  </ItemGroup>
+
 </Project>
