--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,4 +22,14 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --logger "trx;logfilename=testResults.trx"
+    - name: Test Reporter
+      uses: dorny/test-reporter@v1
+      if: success() || failure()
+      with: 
+        artifact: test-results
+        name: NUNIT Tests
+        path: '*.trx'
+        reporter: dotnet-trx
+        fail-on-error: 'true'
+        fail-on-empty: 'true'
